Update: latest changes for mac desktop app

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "npmRebuild": false,
     "nodeGypRebuild": false,
     "mac": {
-      "target": "dmg"
+      "target": "dmg",
+      "icon": "icon/amdital-favicon.icns"
     },
     "win": {
       "target": {
