--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,14 +1,12 @@
-name: Build macOS
+name: Build macOS App
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch:  # Allows manual triggering from GitHub UI
 
 jobs:
-  build-macos:
+  build-mac:
     runs-on: macos-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,19 +14,26 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
+
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build Electron app
-        run: npm run build || echo "No build script defined, skipping."
+      - name: Build app for macOS
+        run: npm run build:mac
 
-      - name: Package app for macOS
-        run: npx electron-builder --mac
-
-      - name: Upload artifact
+      - name: Upload macOS build
         uses: actions/upload-artifact@v4
         with:
-          name: macos-build
-          path: dist/*.dmg 
+          name: AmDital-macOS
+          path: |
+            dist/*.dmg
+            dist/*.zip
